feat(ai-model): 新增 Gemini 模型支持并完善代码规范